# advent_of_code_2021

./: CMakeLists.txt  main.cpp
day_1/: task1.cpp  task1.h
day_10/: task_10.cpp  task_10.h
day_2/: task_2.cpp  task_2.h
day_3/: task_3.cpp  task_3.h
day_4/: task_4.cpp  task_4.h
day_5/: task_5.cpp  task_5.h
day_6/: task_6.cpp  task_6.h
day_7/: task_7.cpp  task_7.h
day_8/: task_8.cpp  task_8.h
day_9/: task_9.cpp  task_9.h
