cmake_minimum_required(VERSION 3.23)
project(advent_of_code_2021)

set(CMAKE_CXX_STANDARD 14)

add_executable(advent_of_code_2021 main.cpp day_1/task1.cpp day_1/task1.h day_2/task_2.cpp day_2/task_2.h day_3/task_3.cpp day_3/task_3.h day_4/task_4.cpp day_4/task_4.h day_5/task_5.cpp day_5/task_5.h day_6/task_6.cpp day_6/task_6.h day_7/task_7.cpp day_7/task_7.h)
